RESOLVED FIXED19310
[wx] Stop crash/asserts due to incorrect hash algorithm
https://bugs.webkit.org/show_bug.cgi?id=19310
Summary [wx] Stop crash/asserts due to incorrect hash algorithm
Kevin Ollivier
Reported 2008-05-29 10:08:17 PDT
Our computeHash function would generate different hashes for fonts which are equal, which is unexpected behavior for the hash() function.
Attachments
Fix to stop asserts caused by incorrect hash algorithm (1.63 KB, patch)
2008-05-29 10:09 PDT, Kevin Ollivier
darin: review+
Kevin Ollivier
Comment 1 2008-05-29 10:09:19 PDT
Created attachment 21413 [details] Fix to stop asserts caused by incorrect hash algorithm In this patch, we now calculate the hash by creating a hash value from all the font's properties, which resolves the asserts and brings us in line with the other ports' behavior.
Alp Toker
Comment 2 2008-06-01 08:53:00 PDT
This issue may exist in the GTK+ or other Cairo-based ports. Haven't checked yet though. Adding GTK keyword so it shows up on our radar.
Darin Adler
Comment 3 2008-06-08 18:13:50 PDT
Comment on attachment 21413 [details] Fix to stop asserts caused by incorrect hash algorithm r=me
Alexey Proskuryakov
Comment 4 2008-06-09 07:52:09 PDT
*** Bug 19274 has been marked as a duplicate of this bug. ***
Kevin Ollivier
Comment 5 2008-06-09 08:40:27 PDT
Landed in r34459, thanks!
Note You need to log in before you can comment on or make changes to this bug.