Reviewed by Darin Adler.

Fix font asserts in wx port. Our computeHash function should generate the same hash for two identical fonts which are different objects, which it wasn't doing before.

https://bugs.webkit.org/show_bug.cgi?id=19310


Canonical link: https://commits.webkit.org/26910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34459 268f45cc-cd09-0410-ab3c-d52691b4dbfc